--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,8 @@ javac.classpath=\
     ${libs.ModalDialog.classpath}:\
     ${libs.flatlaf.classpath}:\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.jbcrypt-0.4.jar}
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${libs.Modal-Dialog.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
